# download_manager

./: Cargo.toml  Readme.md
postman/: Download Manager.postman_collection.json
src/: main.rs
src/commands/: manager.rs  manager_commands.rs  mod.rs
src/scheduler/: download_executor.rs  download_object.rs  download_scheduler.rs  mod.rs
src/server/: executor.rs  mod.rs  utils.rs
