[package]
name = "manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
anyhow = "1.0.53"
actix-web = "3.3.3"
futures = "0.3.19"
reqwest = { version = "0.11.9", features = ["blocking", "json"] }
chrono = "0.4.19"
serde = "1.0.135"
serde_json = "1.0.78"
httparse = "1.5.1"